fix: tooltip height on mobile

--- a/src/styles.css
+++ b/src/styles.css
@@ -59,7 +59,7 @@
   padding: .2rem 0;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
   border-radius: 10px;
-  height: 50px;
+  min-height: 50px;
 }
 
 .tooltip-content-container>* {
